added s3 bucket upload and download url generating functions

--- a/src/src/.envsample
+++ b/src/src/.envsample
@@ -4,3 +4,6 @@ EMAIL_HOST=smtp.email.server.com
 EMAIL_HOST_USER=somelongstring
 EMAIL_HOST_PASSWORD=someevenlongerstring
 DEFAULT_FROM_EMAIL=test@example.com
+S3_BUCKET=some-bucket-name
+AWS_ACCESS_KEY_ID=somelongstringformybucket
+AWS_SECRET_ACCESS_KEY=someevenlongerstringformybucket
