--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ boto3==1.16.22            # via -r requirements.in
 botocore==1.19.22         # via boto3, s3transfer
 certifi==2020.11.8        # via requests
 chardet==3.0.4            # via requests
+dj-database-url==0.5.0    # via -r requirements.in
 django-environ==0.4.5     # via -r requirements.in
 django==3.1.3             # via -r requirements.in, djangorestframework, drf-registration
 djangorestframework-camel-case==1.2.0  # via -r requirements.in
