--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ certifi==2020.11.8
 chardet==3.0.4
 dj-database-url==0.5.0
 django-environ==0.4.5
+django-heroku==0.3.1
 django==3.1.3
 djangorestframework-camel-case==1.2.0
 djangorestframework==3.12.2
@@ -18,6 +19,7 @@ drf-registration==0.1.0
 gunicorn==20.0.4
 idna==2.10
 jmespath==0.10.0
+psycopg2==2.8.6
 python-dateutil==2.8.1
 pytz==2020.4
 requests==2.25.0
@@ -25,6 +27,7 @@ s3transfer==0.3.3
 six==1.15.0
 sqlparse==0.4.1
 urllib3==1.26.2
+whitenoise==5.2.0
 
 # The following packages are considered to be unsafe in a requirements file:
 # setuptools
