--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ botocore==1.19.22
 certifi==2020.11.8
 chardet==3.0.4
 dj-database-url==0.5.0
+django-cors-headers==3.5.0
 django-environ==0.4.5
 django-heroku==0.3.1
 django==3.1.3
