--- a/server/.envsample
+++ b/server/.envsample
@@ -10,3 +10,4 @@ AWS_ACCESS_KEY_ID=somelongstringformybucket
 AWS_SECRET_ACCESS_KEY=someevenlongerstringformybucket
 DATABASE_URL=sqlite:///db.sqlite3
 CORS_ORIGIN_WHITELIST=https://localhost:8080
+FRONTEND_URL=https://localhost:8080
