--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,10 @@
 asgiref==3.3.1
 boto3==1.16.22
 botocore==1.19.22
+certifi==2020.11.8
+cffi==1.14.4
+chardet==3.0.4
+cryptography==3.2.1
 dj-database-url==0.5.0
 django-cors-headers==3.5.0
 django-environ==0.4.5
@@ -14,11 +18,16 @@ django-heroku==0.3.1
 django==3.1.3
 djangorestframework-camel-case==1.2.0
 djangorestframework==3.12.2
+drf-jwt==1.17.2
 gunicorn==20.0.4
+idna==2.10
 jmespath==0.10.0
 psycopg2==2.8.6
+pycparser==2.20
+pyjwt[crypto]==1.7.1
 python-dateutil==2.8.1
 pytz==2020.4
+requests==2.25.0
 s3transfer==0.3.3
 six==1.15.0
 sqlparse==0.4.1
