--- a/server/.envsample
+++ b/server/.envsample
@@ -4,3 +4,5 @@ AWS_ACCESS_KEY_ID=somelongstringformybucket
 AWS_SECRET_ACCESS_KEY=someevenlongerstringformybucket
 DATABASE_URL=sqlite:///db.sqlite3
 CORS_ORIGIN_WHITELIST=https://localhost:8080
+JWT_AUDIENCE=https://someapi/api
+JWT_ISSUER=something.auth0.com
