--- a/heroku.yml
+++ b/heroku.yml
@@ -26,6 +26,6 @@ build:
 release:
   image: web
   command:
-    - python manage.py collectstatic; python manage.py makemigrations api; python manage.py migrate
+    - python manage.py collectstatic --noinput; python manage.py makemigrations api; python manage.py migrate
 run:
   web: gunicorn server.wsgi
